--- a/myprot/rot.html
+++ b/myprot/rot.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>에어로케이개인프로젝트</title>
+    <title>롯데리아홍보사이트개인프로젝트</title>
 </head>
 <body>
     <div id="wrap">
@@ -34,10 +34,10 @@
             </div>
         </header>
         <div class="container">
-            <div class="aerok_visual">
+            <div class="rot_visual">
                 <div class="wrapper">
                     <div class="title">
-                        <h2>에어로케이 사이트 리뉴얼</h2>
+                        <h2>롯데리아 홍보 페이지</h2>
                         <ul>
                             <li><span>TYPE</span><em>반응형 웹 페이지</em></li>
                             <li><span>WORKS</span><em>1인 프로젝트 (기획 100% 디자인 100% 퍼블리싱 100%)</em></li>
@@ -45,32 +45,34 @@
                             <li><span>TOOLS</span><em>css,html,jquery,Illustrator,photoshop,figma</em></li>
                         </ul>
                     </div>
-                    <div class="inner">
-                        <div class="original_site"><a href="#n">원본사이트</a></div>
                         <div class="renewal_site"><a href="#n">개편사이트</a></div>
-                    </div>
                 </div>
             </div>
-            <div class="design_concept">
+            <div class="rot_design_concept">
                 <div class="wrapper">
                     <h2>DESIGN CONCEPT</h2>
                     <div class="top_inner">
                         <div class="title">
                             <span>About</span>
-                            <p>에어로케이는 20~30대 고객층을 대상으로 하며, 사용자들은 항공편 검색, 할인 특가, 이벤트 정보를 빠르게 찾길 원합니다. 하지만 기존 사이트는 메인 화면의 정보 부족과 복잡한 이동 과정으로 인해 사용성이 떨어지는 문제가 있었습니다.
-                                이번 리뉴얼을 통해 더 직관적인 정보 제공과 편리한 검색 환경을 조성해, 고객들이 쉽고 빠르게 원하는 항공권을 찾을 수 있도록 구성했습니다.</p>
+                            <p>롯데리아는 10~20대 고객층을 겨냥해 브랜드를 홍보하며, 이번 홍보 페이지에서는 밝고 생동감 있는 디자인과 캐릭터 요소로 친근하게 전달하도록 했습니다.
+                                페이지 구성 추천 메뉴, 신제품, 시즌 한정 메뉴를 직관적으로 배치 하고
+                                할인 행사 및 쿠폰 정보 강조, 클릭 시 주문 페이지로 연결 했습니다.</p>
                         </div>
                         <div class="typography">
+                            <em>Ria Sns  ExtraBold</em>
                             <span>프리텐다드 Pretendard Bold</span>
                             <strong>프리텐다드 Pretendard Regualr</strong>
                         </div>
                     </div>
                     <div class="color">
                         <div class="prmary">
-                            <span>Priamry 50</span><em>#002554</em>
+                            <span>Priamry 50</span><em>#BD001F</em>
+                        </div>
+                        <div class="pramry_2">
+                            <span>Priamry 40</span><em>#F00028</em>
                         </div>
                         <div class="secondary">
-                            <span>Secondary 50</span><em>#FFA600</em>
+                            <span>Secondary 50</span><em>#FFAF00</em>
                         </div>
                         <div class="title_90">
                             <span>Title 90</span><em>#1D1D1D</em>
@@ -81,30 +83,27 @@
                     </div>
                 </div>
             </div>
-            <div class="popup">
+            <div class="rot_popup">
                 <div class="wrapper">
-                    <h2>ENVET POPUP</h2>
-                    <div class="photo"><img src="../myprot/images/aerok/aerok_eventpopup.png" alt="이벤트팝업만든거모음"></div>
+                    <h2>GRAPHIC</h2>
+                    <div class="photo"><img src="../myprot/images/rot/rot_graphic.png" alt="일러스트 그래픽만든거"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="page_detail">
+    <div class="rot_page_detail">
         <h2 class="skip">페이지설명</h2>
         <div class="wrapper">
-            <div class="photo"><img src="../myprot/images/aerok/page.jpg" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
+            <div class="photo"><img src="../myprot/images/rot/rot_page.png" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
         </div>
     </div>
-    <div class="device">
+    <div class="rot_device">
         <div class="wrapper">
             <h2>다양한 디바이스 환경에서 사용목적에맞게 반응형으로 제작했습니다.</h2>
-            <div class="inner">
-                <div class="original_site"><a href="#n">원본사이트</a></div>
                 <div class="renewal_site"><a href="#n">개편사이트</a></div>
-            </div>
             <div class="photo_inner">
-                <div class="mobile"><img src="../myprot/images/aerok/device_m.png" alt="휴대폰목업사진진"></div>
-                <div class="desktop"><img src="../myprot/images/aerok/device_desktop.png" alt="데스크톱목업사진"></div>
+                <div class="mobile"><img src="../myprot/images/rot/mobile_device.png" alt="휴대폰목업사진진"></div>
+                <div class="desktop"><img src="../myprot/images/rot/noto_device.png" alt="데스크톱목업사진"></div>
             </div>
             <div class="group">
                 <div class="mobile">
