--- a/myprot/index.html
+++ b/myprot/index.html
@@ -21,9 +21,9 @@
                 <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
-                        <li><a href="#n"><span>SEJONG</span></a></li>
+                        <li><a href="sejong.html"><span>SEJONG</span></a></li>
                         <li><a href="aerok.html"><span>AERO-K</span></a></li>
-                        <li><a href="#n"><span>ROT</span></a></li>
+                        <li><a href="rot.html"><span>ROT</span></a></li>
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
