--- a/myprot/index.html
+++ b/myprot/index.html
@@ -76,35 +76,35 @@
                 <div class="project_popup">
                     <div class="swiper">
                         <ul class="swiper-wrapper">
-                            <li class="swiper-slide">
-                                <a href="#n" class="personal">
+                            <li class="swiper-slide personal">
+                                <a href="#n">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="../myprot/images/project_01.png" alt="세종시청개인프로젝트"></div>
                                     <span>세종시 메인 리뉴얼</span>
                                 </a>
                             </li>
-                            <li class="swiper-slide" class="personal">
+                            <li class="swiper-slide personal">
                                 <a href="#n">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="../myprot/images/project_02.png" alt="롯데리아홍보페이지개인프로젝트"></div>
                                     <span>롯데리아 홍보 페이지</span>
                                 </a>
                             </li>
-                            <li class="swiper-slide" class="personal">
+                            <li class="swiper-slide personal">
                                 <a href="#n">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="../myprot/images/project_03.png" alt="롯데리아홍보페이지개인프로젝트"></div>
                                     <span>에어로케이 메인 리뉴얼</span>
                                 </a>                                
                             </li>
-                            <li class="swiper-slide" class="client">
+                            <li class="swiper-slide client">
                                 <a href="#n">
                                     <em>Client</em>
                                     <div class="photo"><img src="../myprot/images/project_04.png" alt="엣지팜솔루션카운트UI디자인회사프로젝트"></div>
                                     <span>카운트 솔루션 UI 디자인</span>
                                 </a>
                             </li>
-                            <li class="swiper-slide" class="client">
+                            <li class="swiper-slide client">
                                 <a href="#n">
                                     <em>Client</em>
                                     <div class="photo"><img src="../myprot/images/project_05.png" alt="엣지팜솔루션매니저UI디자인회사프로젝트"></div>
