--- a/myprot/aerok.html
+++ b/myprot/aerok.html
@@ -3,14 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/layout.js"></script>
-    <script src="js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>에어로케이개인프로젝트</title>
 </head>
@@ -27,8 +20,8 @@
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
-                        <li><a href="#n"><span>MANNGER</span></a></li>
-                        <li><a href="#n"><span>COUNT</span></a></li>
+                        <li><a href="mannger.html"><span>MANNGER</span></a></li>
+                        <li><a href="count.html"><span>COUNT</span></a></li>
                     </ul>
                 </nav>
             </div>
