--- a/myprot/index.html
+++ b/myprot/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/layout.js"></script>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
@@ -27,8 +26,8 @@
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
-                        <li><a href="#n"><span>MANNGER</span></a></li>
-                        <li><a href="#n"><span>COUNT</span></a></li>
+                        <li><a href="mannger.html"><span>MANNGER</span></a></li>
+                        <li><a href="count.html"><span>COUNT</span></a></li>
                     </ul>
                 </nav>
             </div>
