로고클릭홈이동할수있게 변경함
..

--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -38,7 +38,7 @@
             </div> 
             <div class="header_bottom">
                 <div class="wrapper">
-                    <h1 class="logo"><a href="#n"><img src="../Sejong/images/logo_w.svg" alt="세종시로고"><span>세종로고</span></a></h1>
+                    <h1 class="logo"><a href="index.html"><img src="../Sejong/images/logo_w.svg" alt="세종시로고"><span>세종로고</span></a></h1>
                     <nav class="gnb">
                         <ul class="depth1">
                             <li>
