--- a/rot/index.html
+++ b/rot/index.html
@@ -16,7 +16,7 @@
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="#n">롯데리아로고</a></h1>
+                <h1 class="logo"><a href="index.html">롯데리아로고</a></h1>
                 <div class="tnb">                
                     <div class="facebook"><a href="#n">페이스북</a></div>
                     <div class="insta"><a href="#n">인스타</a></div>
