--- a/myprot/mannger.html
+++ b/myprot/mannger.html
@@ -32,6 +32,7 @@
                 <div class="photo"><img src="../myprot/images/manneger/manneger_page.jpg" alt="매니저 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
             </div>
         </div>
+    </div>
     <footer>
         <div class="wrapper">
             <h2>CONTECT US</h2>
