--- a/myprot/count.html
+++ b/myprot/count.html
@@ -28,19 +28,21 @@
         </header>
         <div class="container">
             <div class="count">
+                <h2 class="skip">카운트페이지</h2>
                 <div class="wrapper">
                 <div class="photo"><img src="../myprot/images/count/count_page.jpg" alt="카운트 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
             </div>
         </div>
-    <footer>
-        <div class="wrapper">
-            <h2>CONTECT US</h2>
-            <div class="infor">
-            <address>gkscks1248@gmail.com</address>
-            <i class="skip">슬래쉬</i>
-            <span class="call">+82 10-5601-1504</span>
+        <footer>
+            <div class="wrapper">
+                <h2>CONTECT US</h2>
+                <div class="infor">
+                <address>gkscks1248@gmail.com</address>
+                <i class="skip">슬래쉬</i>
+                <span class="call">+82 10-5601-1504</span>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
