--- a/myprot/mannger.html
+++ b/myprot/mannger.html
@@ -29,7 +29,8 @@
         <div class="container">
             <div class="mannger">
                 <div class="wrapper">
-                <div class="photo"><img src="../myprot/images/manneger/manneger_page.jpg" alt="매니저 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
+                    <div class="photo"><img src="../myprot/images/manneger/manneger_page.jpg" alt="매니저 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
+                </div>
             </div>
         </div>
     </div>
@@ -37,9 +38,9 @@
         <div class="wrapper">
             <h2>CONTECT US</h2>
             <div class="infor">
-            <address>gkscks1248@gmail.com</address>
-            <i class="skip">슬래쉬</i>
-            <span class="call">+82 10-5601-1504</span>
+                <address>gkscks1248@gmail.com</address>
+                <i class="skip">슬래쉬</i>
+                <span class="call">+82 10-5601-1504</span>
             </div>
         </div>
     </footer>
