--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -783,7 +783,7 @@
                         <h2 class="skip">검색</h2>
                         <div class="serach_content">
                             <div class="sejong">
-                                <a href="#n"><img src="images/search/search_sejong.jpg" alt="세종캐릭터"></a>
+                                <a href="index.html"><img src="images/search/search_sejong.jpg" alt="세종캐릭터"></a>
                             </div>
                             <div class="search_inner">
                                 <label for="keyword">검색어입력</label>
