--- a/mannger.html
+++ b/mannger.html
@@ -11,7 +11,7 @@
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="./images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
@@ -20,7 +20,7 @@
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
-                        <li><a href="mannger.html"><span>MANNGER</span></a></li>
+                        <li class="on"><a href="mannger.html"><span>MANNGER</span></a></li>
                         <li><a href="count.html"><span>COUNT</span></a></li>
                     </ul>
                 </nav>
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="mannger">
                 <div class="wrapper">
-                    <div class="photo"><img src="../myprot/images/manneger/manneger_page.jpg" alt="매니저 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
+                    <div class="photo"><img src="./images/manneger/manneger_page.jpg" alt="매니저 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
                 </div>
             </div>
         </div>
