--- a/prot.html
+++ b/prot.html
@@ -17,7 +17,7 @@
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="./images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="photo">
-                        <img src="../myprot/images/3d_hanshinhee.png" alt="한신희 블렌더로만든 3D 그래픽아트">
+                        <img src="./images/3d_hanshinhee.png" alt="한신희 블렌더로만든 3D 그래픽아트">
                     </div>
                 </div>
             </div>
@@ -78,35 +78,35 @@
                             <li class="swiper-slide personal">
                                 <a href="#n">
                                     <strong>Personal</strong>
-                                    <div class="photo"><img src="../myprot/images/project_01.png" alt="세종시청개인프로젝트"></div>
+                                    <div class="photo"><img src="./images/project_01.png" alt="세종시청개인프로젝트"></div>
                                     <span>세종시 메인 리뉴얼</span>
                                 </a>
                             </li>
                             <li class="swiper-slide personal">
                                 <a href="#n">
                                     <strong>Personal</strong>
-                                    <div class="photo"><img src="../myprot/images/project_02.png" alt="롯데리아홍보페이지개인프로젝트"></div>
+                                    <div class="photo"><img src="./images/project_02.png" alt="롯데리아홍보페이지개인프로젝트"></div>
                                     <span>롯데리아 홍보 페이지</span>
                                 </a>
                             </li>
                             <li class="swiper-slide personal">
                                 <a href="#n">
                                     <strong>Personal</strong>
-                                    <div class="photo"><img src="../myprot/images/project_03.png" alt="롯데리아홍보페이지개인프로젝트"></div>
+                                    <div class="photo"><img src="./images/project_03.png" alt="롯데리아홍보페이지개인프로젝트"></div>
                                     <span>에어로케이 메인 리뉴얼</span>
                                 </a>                                
                             </li>
                             <li class="swiper-slide client">
                                 <a href="#n">
                                     <em>Client</em>
-                                    <div class="photo"><img src="../myprot/images/project_04.png" alt="엣지팜솔루션카운트UI디자인회사프로젝트"></div>
+                                    <div class="photo"><img src="./images/project_04.png" alt="엣지팜솔루션카운트UI디자인회사프로젝트"></div>
                                     <span>카운트 솔루션 UI 디자인</span>
                                 </a>
                             </li>
                             <li class="swiper-slide client">
                                 <a href="#n">
                                     <em>Client</em>
-                                    <div class="photo"><img src="../myprot/images/project_05.png" alt="엣지팜솔루션매니저UI디자인회사프로젝트"></div>
+                                    <div class="photo"><img src="./images/project_05.png" alt="엣지팜솔루션매니저UI디자인회사프로젝트"></div>
                                     <span>매니저 솔루션 UI 디자인</span>
                                 </a>
                             </li>
