--- a/rot.html
+++ b/rot.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
-    <title>세종시청개인프로젝트</title>
+    <title>롯데리아홍보사이트개인프로젝트</title>
 </head>
 <body>
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="./images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
                         <li><a href="aerok.html"><span>AERO-K</span></a></li>
-                        <li><a href="rot.html"><span>ROT</span></a></li>
+                        <li class="on"><a href="rot.html"><span>ROT</span></a></li>
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
@@ -27,10 +27,10 @@
             </div>
         </header>
         <div class="container">
-            <div class="sejong_visual">
+            <div class="rot_visual">
                 <div class="wrapper">
                     <div class="title">
-                        <h2>세종시 사이트 리뉴얼</h2>
+                        <h2>롯데리아 홍보 페이지</h2>
                         <ul>
                             <li><span>TYPE</span><em>반응형 웹 페이지</em></li>
                             <li><span>WORKS</span><em>1인 프로젝트 (기획 100% 디자인 100% 퍼블리싱 100%)</em></li>
@@ -38,34 +38,34 @@
                             <li><span>TOOLS</span><em>css,html,jquery,Illustrator,photoshop,figma</em></li>
                         </ul>
                     </div>
-                    <div class="inner">
-                        <div class="original_site"><a href="#n">원본사이트</a></div>
-                        <div class="renewal_site"><a href="#n">개편사이트</a></div>
-                    </div>
+                        <div class="renewal_site"><a href="../prot/rot/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                 </div>
             </div>
-            <div class="sejong_design_concept">
+            <div class="rot_design_concept">
                 <div class="wrapper">
                     <h2>DESIGN CONCEPT</h2>
                     <div class="top_inner">
                         <div class="title">
                             <span>About</span>
-                            <p>세종시는 제2정부 도시로서의 정체성을 반영해야 하지만, 기존 사이트는 정보 구분이 애매하고 가독성이 낮아 개선이 필요했습니다. 사용자가 정책, 지원사업, 민원 확인 등을 빠르게 찾을 수 있도록 정보를 그룹화하고 직관적인 UI로 정리했습니다.
-                                디자인 방향으로는  정부 UI/UX 가이드라인 준수 + 세종시만의 개성 유지
-                                기존 보라색 활용하되, 정보 전달력을 높이도록 재해석 했습니다.
-                                가독성과 사용성을 개선하고 세종시만의 차별화된 디자인을 완성했습니다.</p>
+                            <p>롯데리아는 10~20대 고객층을 겨냥해 브랜드를 홍보하며, 이번 홍보 페이지에서는 밝고 생동감 있는 디자인과 캐릭터 요소로 친근하게 전달하도록 했습니다.
+                                페이지 구성 추천 메뉴, 신제품, 시즌 한정 메뉴를 직관적으로 배치 하고
+                                할인 행사 및 쿠폰 정보 강조, 클릭 시 주문 페이지로 연결 했습니다.</p>
                         </div>
                         <div class="typography">
+                            <em></em>
                             <span>프리텐다드 Pretendard Bold</span>
                             <strong>프리텐다드 Pretendard Regualr</strong>
                         </div>
                     </div>
                     <div class="color">
                         <div class="prmary">
-                            <span>Priamry 50</span><em>#3E3276</em>
+                            <span>Priamry 50</span><em>#BD001F</em>
+                        </div>
+                        <div class="pramry_2">
+                            <span>Priamry 40</span><em>#F00028</em>
                         </div>
                         <div class="secondary">
-                            <span>Secondary 50</span><em>#6857B8</em>
+                            <span>Secondary 50</span><em>#FFAF00</em>
                         </div>
                         <div class="title_90">
                             <span>Title 90</span><em>#1D1D1D</em>
@@ -76,29 +76,26 @@
                     </div>
                 </div>
             </div>
-            <div class="sejong_popup">
+            <div class="rot_popup">
                 <div class="wrapper">
-                    <h2>ENVET POPUP</h2>
-                    <div class="photo"><img src="../myprot/images/sejong/sejong_popup.png" alt="이벤트팝업만든거모음"></div>
+                    <h2>GRAPHIC</h2>
+                    <div class="photo"><img src="./images/rot/rot_graphic.png" alt="일러스트 그래픽만든거"></div>
                 </div>
             </div>
         </div>
-        <div class="sejong_page_detail">
+        <div class="rot_page_detail">
             <h2 class="skip">페이지설명</h2>
             <div class="wrapper">
-                <div class="photo"><img src="../myprot/images/sejong/sejong_page.png" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
+                <div class="photo"><img src="./images/rot/rot_page.png" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
             </div>
         </div>
-        <div class="sejong_device">
+        <div class="rot_device">
             <div class="wrapper">
                 <h2>다양한 디바이스 환경에서 사용목적에맞게 반응형으로 제작했습니다.</h2>
-                <div class="inner">
-                    <div class="original_site"><a href="#n">원본사이트</a></div>
-                    <div class="renewal_site"><a href="#n">개편사이트</a></div>
-                </div>
+                <div class="renewal_site"><a href="../prot/rot/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                 <div class="photo_inner">
-                    <div class="mobile"><img src="../myprot/images/sejong/mobile_device.png" alt="휴대폰목업사진진"></div>
-                    <div class="desktop"><img src="../myprot/images/sejong/noto_device.png" alt="데스크톱목업사진"></div>
+                    <div class="mobile"><img src="./images/rot/mobile_device.png" alt="휴대폰목업사진진"></div>
+                    <div class="desktop"><img src="./images/rot/noto_device.png" alt="데스크톱목업사진"></div>
                 </div>
                 <div class="group">
                     <div class="mobile">
