--- a/count.html
+++ b/count.html
@@ -11,7 +11,7 @@
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="./images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
@@ -21,7 +21,7 @@
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
                         <li><a href="mannger.html"><span>MANNGER</span></a></li>
-                        <li><a href="count.html"><span>COUNT</span></a></li>
+                        <li class="on"><a href="count.html"><span>COUNT</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -30,7 +30,7 @@
             <div class="count">
                 <h2 class="skip">카운트페이지</h2>
                 <div class="wrapper">
-                    <div class="photo"><img src="../myprot/images/count/count_page.jpg" alt="카운트 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
+                    <div class="photo"><img src="./images/count/count_page.jpg" alt="카운트 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
                 </div>
             </div>
         </div>
