--- a/sejong.html
+++ b/sejong.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
-    <title>에어로케이개인프로젝트</title>
+    <title>세종시청개인프로젝트</title>
 </head>
 <body>
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="./images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
-                        <li><a href="sejong.html"><span>SEJONG</span></a></li>
+                        <li class="on"><a href="sejong.html"><span>SEJONG</span></a></li>
                         <li><a href="aerok.html"><span>AERO-K</span></a></li>
                         <li><a href="rot.html"><span>ROT</span></a></li>
                     </ul>
@@ -27,10 +27,10 @@
             </div>
         </header>
         <div class="container">
-            <div class="aerok_visual">
+            <div class="sejong_visual">
                 <div class="wrapper">
                     <div class="title">
-                        <h2>에어로케이 사이트 리뉴얼</h2>
+                        <h2>세종시 사이트 리뉴얼</h2>
                         <ul>
                             <li><span>TYPE</span><em>반응형 웹 페이지</em></li>
                             <li><span>WORKS</span><em>1인 프로젝트 (기획 100% 디자인 100% 퍼블리싱 100%)</em></li>
@@ -39,19 +39,21 @@
                         </ul>
                     </div>
                     <div class="inner">
-                        <div class="original_site"><a href="#n">원본사이트</a></div>
-                        <div class="renewal_site"><a href="#n">개편사이트</a></div>
+                        <div class="original_site"><a href="https://www.sejong.go.kr/index.jsp" target="_blank" title="새창열림">원본사이트</a></div>
+                        <div class="renewal_site"><a href="../prot/Sejong/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                     </div>
                 </div>
             </div>
-            <div class="design_concept">
+            <div class="sejong_design_concept">
                 <div class="wrapper">
                     <h2>DESIGN CONCEPT</h2>
                     <div class="top_inner">
                         <div class="title">
                             <span>About</span>
-                            <p>에어로케이는 20~30대 고객층을 대상으로 하며, 사용자들은 항공편 검색, 할인 특가, 이벤트 정보를 빠르게 찾길 원합니다. 하지만 기존 사이트는 메인 화면의 정보 부족과 복잡한 이동 과정으로 인해 사용성이 떨어지는 문제가 있었습니다.
-                                이번 리뉴얼을 통해 더 직관적인 정보 제공과 편리한 검색 환경을 조성해, 고객들이 쉽고 빠르게 원하는 항공권을 찾을 수 있도록 구성했습니다.</p>
+                            <p>세종시는 제2정부 도시로서의 정체성을 반영해야 하지만, 기존 사이트는 정보 구분이 애매하고 가독성이 낮아 개선이 필요했습니다. 사용자가 정책, 지원사업, 민원 확인 등을 빠르게 찾을 수 있도록 정보를 그룹화하고 직관적인 UI로 정리했습니다.
+                                디자인 방향으로는  정부 UI/UX 가이드라인 준수 + 세종시만의 개성 유지
+                                기존 보라색 활용하되, 정보 전달력을 높이도록 재해석 했습니다.
+                                가독성과 사용성을 개선하고 세종시만의 차별화된 디자인을 완성했습니다.</p>
                         </div>
                         <div class="typography">
                             <span>프리텐다드 Pretendard Bold</span>
@@ -60,10 +62,10 @@
                     </div>
                     <div class="color">
                         <div class="prmary">
-                            <span>Priamry 50</span><em>#002554</em>
+                            <span>Priamry 50</span><em>#3E3276</em>
                         </div>
                         <div class="secondary">
-                            <span>Secondary 50</span><em>#FFA600</em>
+                            <span>Secondary 50</span><em>#6857B8</em>
                         </div>
                         <div class="title_90">
                             <span>Title 90</span><em>#1D1D1D</em>
@@ -74,29 +76,29 @@
                     </div>
                 </div>
             </div>
-            <div class="popup">
+            <div class="sejong_popup">
                 <div class="wrapper">
                     <h2>ENVET POPUP</h2>
-                    <div class="photo"><img src="../myprot/images/aerok/aerok_eventpopup.png" alt="이벤트팝업만든거모음"></div>
+                    <div class="photo"><img src="./images/sejong/sejong_popup.png" alt="이벤트팝업만든거모음"></div>
                 </div>
             </div>
         </div>
-        <div class="page_detail">
+        <div class="sejong_page_detail">
             <h2 class="skip">페이지설명</h2>
             <div class="wrapper">
-                <div class="photo"><img src="../myprot/images/aerok/page.jpg" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
+                <div class="photo"><img src="./images/sejong/sejong_page.png" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
             </div>
         </div>
-        <div class="device">
+        <div class="sejong_device">
             <div class="wrapper">
                 <h2>다양한 디바이스 환경에서 사용목적에맞게 반응형으로 제작했습니다.</h2>
                 <div class="inner">
-                    <div class="original_site"><a href="#n">원본사이트</a></div>
-                    <div class="renewal_site"><a href="#n">개편사이트</a></div>
+                    <div class="original_site"><a href="https://www.sejong.go.kr/index.jsp" target="_blank" title="새창열림">원본사이트</a></div>
+                    <div class="renewal_site"><a href="../prot/Sejong/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                 </div>
                 <div class="photo_inner">
-                    <div class="mobile"><img src="../myprot/images/aerok/device_m.png" alt="휴대폰목업사진진"></div>
-                    <div class="desktop"><img src="../myprot/images/aerok/device_desktop.png" alt="데스크톱목업사진"></div>
+                    <div class="mobile"><img src="./images/sejong/mobile_device.png" alt="휴대폰목업사진진"></div>
+                    <div class="desktop"><img src="./images/sejong/noto_device.png" alt="데스크톱목업사진"></div>
                 </div>
                 <div class="group">
                     <div class="mobile">
@@ -122,9 +124,9 @@
         <div class="wrapper">
             <h2>CONTECT US</h2>
             <div class="infor">
-            <address>gkscks1248@gmail.com</address>
-            <i class="skip">슬래쉬</i>
-            <span class="call">+82 10-5601-1504</span>
+                <address>gkscks1248@gmail.com</address>
+                <i class="skip">슬래쉬</i>
+                <span class="call">+82 10-5601-1504</span>
             </div>
         </div>
     </footer>
