arrow 추가 원본버튼만있음
..

--- a/rot.html
+++ b/rot.html
@@ -38,8 +38,13 @@
                             <li><span>TOOLS</span><em>css,html,jquery,Illustrator,photoshop,figma</em></li>
                         </ul>
                     </div>
-                        <div class="renewal_site"><a href="../prot/rot/index.html" target="_blank" title="새창열림">개편사이트</a></div>
-                </div>
+                    <div class="renewal_site"><a href="../prot/rot/index.html" target="_blank" title="새창열림">개편사이트</a></div>
+                    <div class="arrow_div">
+                        <div class="arrow">
+                          <img src="https://i.ibb.co/BTbSmBS/1.png" alt="움직이는 화살표">
+                        </div>
+                    </div>
+                </div>                        
             </div>
             <div class="rot_design_concept">
                 <div class="wrapper">
