--- a/sejong.html
+++ b/sejong.html
@@ -39,8 +39,12 @@
                         </ul>
                     </div>
                     <div class="inner">
-                        <div class="original_site"><a href="https://www.sejong.go.kr/index.jsp" target="_blank" title="새창열림">원본사이트</a></div>
                         <div class="renewal_site"><a href="../prot/Sejong/index.html" target="_blank" title="새창열림">개편사이트</a></div>
+                    </div>
+                    <div class="arrow_div">
+                        <div class="arrow">
+                          <img src="https://i.ibb.co/BTbSmBS/1.png" alt="움직이는 화살표">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -91,9 +95,8 @@
         </div>
         <div class="sejong_device">
             <div class="wrapper">
-                <h2>다양한 디바이스 환경에서 사용목적에맞게 반응형으로 제작했습니다.</h2>
+                <h2>다양한 디바이스 환경에서 사용목적에 맞게 반응형으로 제작했습니다.</h2>
                 <div class="inner">
-                    <div class="original_site"><a href="https://www.sejong.go.kr/index.jsp" target="_blank" title="새창열림">원본사이트</a></div>
                     <div class="renewal_site"><a href="../prot/Sejong/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                 </div>
                 <div class="photo_inner">
