--- a/aerok.html
+++ b/aerok.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>에어로케이개인프로젝트</title>
 </head>
 <body>
@@ -39,8 +41,12 @@
                         </ul>
                     </div>
                     <div class="inner">
-                        <div class="original_site"><a href="https://www.aerok.com/" target="_blank" title="새창열림">원본사이트</a></div>
                         <div class="renewal_site"><a href="../prot/Aerok/index.html" target="_blank" title="새창열림">개편사이트</a></div>
+                    </div>
+                    <div class="arrow_div">
+                        <div class="arrow">
+                          <img src="https://i.ibb.co/BTbSmBS/1.png" alt="움직이는 화살표">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -89,9 +95,8 @@
         </div>
         <div class="device">
             <div class="wrapper">
-                <h2>다양한 디바이스 환경에서 사용목적에맞게 반응형으로 제작했습니다.</h2>
+                <h2>다양한 디바이스 환경에서 사용목적에 맞게 반응형으로 제작했습니다.</h2>
                 <div class="inner">
-                    <div class="original_site"><a href="https://www.aerok.com/" target="_blank" title="새창열림">원본사이트</a></div>
                     <div class="renewal_site"><a href="../prot/Aerok/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                 </div>
                 <div class="photo_inner">
