--- a/rot.html
+++ b/rot.html
@@ -41,7 +41,7 @@
                     <div class="renewal_site"><a href="../prot/rot/index.html" target="_blank" title="새창열림">개편사이트</a></div>
                     <div class="arrow_div">
                         <div class="arrow">
-                          <img src="https://i.ibb.co/BTbSmBS/1.png" alt="움직이는 화살표">
+                          <img src="../prot/images/arrow.png" alt="움직이는 화살표">
                         </div>
                     </div>
                 </div>                        
