20250317-전남대학교 디자인 시안만올림
추가된거
1. 헤더에 전남대학교
2. 전남대학교 폴더
3. 전남대학교 페이지

--- a/chonnam.html
+++ b/chonnam.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
-    <title>에어로케이개인프로젝트</title>
+    <title>전남대학교메인리뉴얼</title>
 </head>
 <body>
     <div id="wrap">
@@ -15,9 +15,9 @@
                 <nav class="gnb">
                     <ul class="personal_depth1">
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
-                        <li class="on"><a href="aerok.html"><span>AERO-K</span></a></li>
+                        <li><a href="aerok.html"><span>AERO-K</span></a></li>
                         <li><a href="rot.html"><span>ROT</span></a></li>
-                        <li><a href="chonnam.html"><span>CHONNAM</span></a></li>
+                        <li class="on"><a href="chonnam.html"><span>CHONNAM</span></a></li>
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
@@ -28,10 +28,10 @@
             </div>
         </header>
         <div class="container">
-            <div class="aerok_visual">
+            <div class="ch_visual">
                 <div class="wrapper">
                     <div class="title">
-                        <h2>에어로케이 사이트 리뉴얼</h2>
+                        <h2>전남대학교 사이트 리뉴얼</h2>
                         <ul>
                             <li><span>TYPE</span><em>반응형 웹 페이지</em></li>
                             <li><span>WORKS</span><em>1인 프로젝트 (기획 100% 디자인 100% 퍼블리싱 100%)</em></li>
@@ -39,9 +39,9 @@
                             <li><span>TOOLS</span><em>css,html,jquery,Illustrator,photoshop,figma</em></li>
                         </ul>
                     </div>
-                    <div class="inner">
+                    <!-- <div class="inner">
                         <div class="renewal_site"><a href="../prot/Aerok/index.html" target="_blank" title="새창열림">개편사이트</a></div>
-                    </div>
+                    </div> -->
                     <div class="arrow_div">
                         <div class="arrow">
                           <img src="../prot/images/arrow.png" alt="움직이는 화살표">
@@ -49,14 +49,13 @@
                     </div>
                 </div>
             </div>
-            <div class="design_concept">
+            <div class="ch_design_concept">
                 <div class="wrapper">
                     <h2>DESIGN CONCEPT</h2>
                     <div class="top_inner">
                         <div class="title">
                             <span>About</span>
-                            <p>에어로케이는 20~30대 고객층을 대상으로 하며, 사용자들은 항공편 검색, 할인 특가, 이벤트 정보를 빠르게 찾길 원합니다. 하지만 기존 사이트는 메인 화면의 정보 부족과 복잡한 이동 과정으로 인해 사용성이 떨어지는 문제가 있었습니다.
-                                이번 리뉴얼을 통해 더 직관적인 정보 제공과 편리한 검색 환경을 조성해, 고객들이 쉽고 빠르게 원하는 항공권을 찾을 수 있도록 구성했습니다.</p>
+                            <p>전남대학교 사이트의 리뉴얼은 학생들이 사이트에 들어와 가장 쉽게 원하는 정보를 찾을 수 있도록 직관적이고 효율적인 사용자 경험을 제공하는 데 초점을 맞췄습니다. 대상 사용자는 주로 20대의 입학생과 재학생들로, 대학 생활에 필요한 정보들을 빠르고 정확하게 찾기를 원합니다. 기존의 전남대학교 사이트는 정보가 분산되어 있거나 복잡하게 배치되어 있어 학생들이 필요한 정보를 찾는 데 불편함을 겪고 있었던 문제점을 개선하고자 합니다.</p>
                         </div>
                         <div class="typography">
                             <span>프리텐다드 Pretendard Bold</span>
@@ -65,10 +64,10 @@
                     </div>
                     <div class="color">
                         <div class="prmary">
-                            <span>Priamry 50</span><em>#002554</em>
+                            <span>Priamry 50</span><em>#008736</em>
                         </div>
                         <div class="secondary">
-                            <span>Secondary 50</span><em>#FFA600</em>
+                            <span>Secondary 50</span><em>#14331A</em>
                         </div>
                         <div class="title_90">
                             <span>Title 90</span><em>#1D1D1D</em>
@@ -81,26 +80,28 @@
             </div>
             <div class="popup">
                 <div class="wrapper">
-                    <h2>ENVET POPUP</h2>
-                    <div class="photo"><img src="./images/aerok/aerok_eventpopup.png" alt="이벤트팝업만든거모음"></div>
+                    <h2>GRAPHIC</h2>
+                    <div class="photo_art"><img src="../prot/images/chonnam/banner_01.jpg" alt="전남대학교 선 아트 그래픽"></div>
+                    <h2>ICON</h2>
+                    <div class="photo_icon"><img src="../prot/images/chonnam/icon_01.png" alt="전남대학교 아이콘 모음"></div>
                 </div>
             </div>
+            <div class="ch_page_detail">
+                <h2 class="skip">페이지설명</h2>
+                <div class="wrapper">
+                    <div class="photo"><img src="../prot/images/chonnam/chonnam_02.png" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
+                </div>
+            </div> 
         </div>
-        <div class="page_detail">
-            <h2 class="skip">페이지설명</h2>
-            <div class="wrapper">
-                <div class="photo"><img src="./images/aerok/page.jpg" alt="페이지 전체사진이며 디테일하게 설명되어있다."></div>
-            </div>
-        </div>
-        <div class="device">
+        <div class="ch_device">
             <div class="wrapper">
                 <h2>다양한 디바이스 환경에서 사용목적에 맞게 반응형으로 제작했습니다.</h2>
-                <div class="inner">
+                <!-- <div class="inner">
                     <div class="renewal_site"><a href="../prot/Aerok/index.html" target="_blank" title="새창열림">개편사이트</a></div>
-                </div>
+                </div> -->
                 <div class="photo_inner">
-                    <div class="mobile"><img src="./images/aerok/device_m.png" alt="휴대폰목업사진진"></div>
-                    <div class="desktop"><img src="./images/aerok/device_desktop.png" alt="데스크톱목업사진"></div>
+                    <div class="mobile"><img src="../prot/images/chonnam/mobile_01.png" alt="휴대폰목업사진진"></div>
+                    <div class="desktop"><img src="../prot/images/chonnam/desktop_01.png" alt="데스크톱목업사진"></div>
                 </div>
                 <div class="group">
                     <div class="mobile">
@@ -113,7 +114,7 @@
                     <div class="line">선</div>
                     <div class="notebook">
                         <div class="inner">
-                            <span>1260 GRID</span>
+                            <span>1440 GRID</span>
                             <em>PC</em>
                         </div>
                         <i class="skip">모니터아이콘</i>
@@ -124,10 +125,10 @@
         <footer>
             <div class="wrapper">
                 <h2>CONTECT US</h2>
-                <div class="infor">
-                <address>gkscks1248@gmail.com</address>
-                <i class="skip">슬래쉬</i>
-                <span class="call">+82 10-5601-1504</span>
+                    <div class="infor">
+                    <address>gkscks1248@gmail.com</address>
+                    <i class="skip">슬래쉬</i>
+                    <span class="call">+82 10-5601-1504</span>
                 </div>
             </div>
         </footer>
