--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
                         <li><a href="aerok.html"><span>AERO-K</span></a></li>
                         <li><a href="rot.html"><span>ROT</span></a></li>
+                        <li><a href="chonnam.html"><span>CHONNAM</span></a></li>
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
@@ -95,8 +96,15 @@
                             <li class="swiper-slide personal">
                                 <a href="../prot/aerok.html">
                                     <strong>Personal</strong>
-                                    <div class="photo"><img src="./images/project_03.png" alt="롯데리아홍보페이지개인프로젝트"></div>
+                                    <div class="photo"><img src="./images/project_03.png" alt="에어로 케이 메인 리뉴얼"></div>
                                     <span>에어로케이 메인 리뉴얼</span>
+                                </a>                                
+                            </li>
+                            <li class="swiper-slide personal">
+                                <a href="../prot/aerok.html">
+                                    <strong>Personal</strong>
+                                    <div class="photo"><img src="./images/project_06.png" alt="전남대학교 메인 리뉴얼"></div>
+                                    <span>전남대학교 메인 리뉴얼</span>
                                 </a>                                
                             </li>
                             <li class="swiper-slide client">
