--- a/rot.html
+++ b/rot.html
@@ -17,6 +17,7 @@
                         <li><a href="sejong.html"><span>SEJONG</span></a></li>
                         <li><a href="aerok.html"><span>AERO-K</span></a></li>
                         <li class="on"><a href="rot.html"><span>ROT</span></a></li>
+                        <li><a href="chonnam.html"><span>CHONNAM</span></a></li>
                     </ul>
                     <i class="skip">슬래쉬</i>
                     <ul class="client_depth1">
