h1 로고 푸터에도 있는거 삭제
..

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -640,7 +640,7 @@
         </div>
         <footer>
             <div class="wrapper">
-                <h1 class="logo"><a href="index.html">에어로케이</a></h1>
+                <div class="logo"><a href="index.html">에어로케이</a></div>
                 <div class="infor">
                     <ul>
                         <li>에어로케이항공㈜ Aero K Airlines Co. Ltd.</li>
