--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </a>                                
                             </li>
                             <li class="swiper-slide personal">
-                                <a href="../prot/aerok.html">
+                                <a href="../prot/chonnam.html">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="./images/project_06.png" alt="전남대학교 메인 리뉴얼"></div>
                                     <span>전남대학교 메인 리뉴얼</span>
