--- a/count.html
+++ b/count.html
@@ -31,7 +31,7 @@
             <div class="count">
                 <h2 class="skip">카운트페이지</h2>
                 <div class="wrapper">
-                    <div class="photo"><img src="./images/count/count_page.jpg" alt="카운트 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
+                    <div class="photo"><img src="./images/count/count_page.png" alt="카운트 솔루션을 진행했던 전체 작업물을 jpg로 저장했다."></div>
                 </div>
             </div>
         </div>
