--- a/index.html
+++ b/index.html
@@ -78,43 +78,45 @@
                 </div>
                 <div class="project_popup">
                     <div class="swiper">
-                        <ul class="swiper-wrapper">
-                            <li class="swiper-slide personal">
+                        <ul>
+                            <li>    
                                 <a href="../prot/sejong.html">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="./images/project_01.png" alt="세종시청개인프로젝트"></div>
                                     <span>세종시 메인 리뉴얼</span>
                                 </a>
                             </li>
-                            <li class="swiper-slide personal">
+                            <li>
                                 <a href="../prot/rot.html">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="./images/project_02.png" alt="롯데리아홍보페이지개인프로젝트"></div>
                                     <span>롯데리아 홍보 페이지</span>
                                 </a>
                             </li>
-                            <li class="swiper-slide personal">
+                            <li>
                                 <a href="../prot/aerok.html">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="./images/project_03.png" alt="에어로 케이 메인 리뉴얼"></div>
                                     <span>에어로케이 메인 리뉴얼</span>
                                 </a>                                
                             </li>
-                            <li class="swiper-slide personal">
-                                <a href="../prot/aerok.html">
+                        </ul>
+                        <ul>
+                            <li>
+                                <a href="../prot/chonnam.html">
                                     <strong>Personal</strong>
                                     <div class="photo"><img src="./images/project_06.png" alt="전남대학교 메인 리뉴얼"></div>
                                     <span>전남대학교 메인 리뉴얼</span>
                                 </a>                                
                             </li>
-                            <li class="swiper-slide client">
+                            <li>
                                 <a href="../prot/mannger.html">
                                     <em>Client</em>
                                     <div class="photo"><img src="./images/project_04.png" alt="엣지팜솔루션매니저UI디자인회사프로젝트"></div>
                                     <span>매니저 솔루션 UI 디자인</span>
                                 </a>
                             </li>
-                            <li class="swiper-slide client">
+                            <li>
                                 <a href="../prot/count.html">
                                     <em>Client</em>
                                     <div class="photo"><img src="./images/project_05.png" alt="엣지팜솔루션카운트UI디자인회사프로젝트"></div>
@@ -123,21 +125,6 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="swiper_nav">
-                        <div class="wrapper">
-                            <button class="prev"><span>이전</span></button>
-                            <button class="next"><span>다음</span></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="works">
-                <div class="wrapper">
-                    <div class="title">
-                        <h2>WORKS</h2>
-                        <span>퍼블리싱외 프로젝트를 볼수 있습니다</span>
-                    </div>
-                    <div class="more"><a href="https://www.behance.net/gkscks1248feec" target="_blank">BEHACE 바로가기</a></div>
                 </div>
             </div>
         </div>
