--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                     <address>gkscks1248@gmail.com</address>
                     <i class="skip">슬래쉬</i>
                     <span class="call">+82 10-5601-1504</span>
+                    <i class="skip">슬래쉬</i>
+                    <div class="behance"><a href="https://www.behance.net/gkscks1248feec">비핸스</a></div>
                 </div>
             </div>
         </footer>
